--- a/automated-stack.yaml
+++ b/automated-stack.yaml
@@ -1,10 +1,20 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Automatic Sync Amazon Bedrock Knowledge Base Ingestion. v0.0.1
+Description: Automatic sync for Amazon Bedrock Knowledge Base Ingestion. v0.0.1
 
 Parameters:
   S3BucketName:
     Type: String
     Description: Name of the S3 bucket for the knowledge base
+
+    DataSourceId:
+      Type: String
+      MaxLength: 10
+      Description: Data source ID from knowledge base
+
+    KnowledgeBaseId:
+      Type: String
+      MaxLength: 10
+      Description: knowledgeBaseId ID from knowledge base
 
 Resources:
 
@@ -27,28 +37,54 @@ Resources:
   BedrocKIngestionFunction:
     Type: AWS::Lambda::Function
     Properties:
-      Runtime: python3.9
+      Runtime: python3.12
       Handler: index.lambda_handler
       Code:
         ZipFile: |
           import boto3
+          import json
+          import os
+          import uuid
+          import logging
 
-          bedrock = boto3.client('bedrock')
+          bedrock = boto3.client('bedrock-agent')
+
+          dataSourceId = os.environ['DATA_SOURCE_ID']
+          knowledgeBaseId = os.environ['KB_ID']
+
 
           def lambda_handler(event, context):
+              
+              s3bucketName = event['Records'][0]['s3']['bucket']['name']
+              
+              description = 'new object recived at {0} bucket.'.format(s3bucketName)
+              
               bedrock.start_ingestion_job(
-                  sourceArn=event['Records'][0]['s3']['object']['key']
+                  clientToken= str(uuid.uuid4()),
+                  dataSourceId= dataSourceId,
+                  description= description,
+                  knowledgeBaseId= knowledgeBaseId
+
               )
+              
+              logger.info(description)
+              
               return {
                   'statusCode': 200,
-                  'body': 'Ingestion job started'
+                  'body': json.dumps('Ingestion job started for knowledgeBaseId={0}'.format(knowledgeBaseId))
               }
       Role: !GetAtt LambdaExecutionRole.Arn
+      Environment:
+        Variables:
+          DATA_SOURCE_ID: !Ref DataSourceId
+          KB_ID: !Ref KnowledgeBaseId
+
 
   # EventBridge Rule to trigger the Lambda function
   BedrocKIngestionEventRule:
     Type: AWS::Events::Rule
     Properties:
+      Description: Rule to trigger objects created on S3 bucket.
       EventPattern:
         source:
           - "aws.s3"
@@ -60,6 +96,14 @@ Resources:
       Targets:
         - Arn: !GetAtt BedrocKIngestionFunction.Arn
           Id: BedrocKIngestionFunction
+ 
+  PermissionForEventsToInvokeLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !GetAtt BedrocKIngestionFunction.Arn
+      Action: "lambda:InvokeFunction"
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt: BedrocKIngestionEventRule.Arn
 
 Outputs:
   LambdaFunctionName:
