--- a/automated-stack.yaml
+++ b/automated-stack.yaml
@@ -8,11 +8,13 @@ Parameters:
 
     DataSourceId:
       Type: String
+      MinLength: 1
       MaxLength: 10
       Description: Data source ID from knowledge base
 
     KnowledgeBaseId:
       Type: String
+      MinLength: 1
       MaxLength: 10
       Description: knowledgeBaseId ID from knowledge base
 
@@ -52,12 +54,11 @@ Resources:
           dataSourceId = os.environ['DATA_SOURCE_ID']
           knowledgeBaseId = os.environ['KB_ID']
 
-
           def lambda_handler(event, context):
               
               s3bucketName = event['Records'][0]['s3']['bucket']['name']
               
-              description = 'new object recived at {0} bucket.'.format(s3bucketName)
+              description = 'new object received at {0} bucket.'.format(s3bucketName)
               
               bedrock.start_ingestion_job(
                   clientToken= str(uuid.uuid4()),
@@ -103,7 +104,7 @@ Resources:
       FunctionName: !GetAtt BedrocKIngestionFunction.Arn
       Action: "lambda:InvokeFunction"
       Principal: events.amazonaws.com
-      SourceArn: !GetAtt: BedrocKIngestionEventRule.Arn
+      SourceArn: !GetAtt BedrocKIngestionEventRule.Arn
 
 Outputs:
   LambdaFunctionName:
